# MovieFlix-API-CPP

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
controllers/: movie-controller.cpp
database/: database.cpp
include/: database.hpp  dotenv.h  middlewares.hpp  movie_controller.cpp  movie_controller.hpp  movie_model.hpp  movie_repository.hpp  router.hpp  server.hpp  utils.hpp
middlewares/: middlewares.cpp
models/: movie_model.hpp
repositories/: movie-repository.cpp
router/: router.cpp
server/: server.cpp
utils/: utils.cpp
